--- a/templates/base.html
+++ b/templates/base.html
@@ -69,11 +69,19 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{{ url_for('novo_curriculo') }}">Novo Currículo</a></li>
+              
+              <li><a class="dropdown-item" href="{{ url_for('listar_curriculos') }}">Listar Currículos</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="{{ url_for('listar_curriculos') }}">Listar Currículos</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('novo_contrato') }}">Novo Contrato</a></li>
+              
+              <li><a class="dropdown-item" href="{{ url_for('listar_contratos') }}">Listar Contratos</a></li>
+          
             </ul>
+            
+              
+            
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
