--- a/templates/novo_contrato.html
+++ b/templates/novo_contrato.html
@@ -138,6 +138,11 @@
           <i class="bi bi-arrow-left-circle me-1"></i>Voltar
         </button>
         {{ form.submit(class="btn btn-success") }}
+        {% if contrato %}
+            <a href="{{ url_for('preview_contrato', id=contrato.id) }}" class="btn btn-primary">
+                Visualizar Contrato
+            </a>
+        {% endif %}
       </div>
 
     </form>
