implementado configuracoes e att os e orca

--- a/templates/base.html
+++ b/templates/base.html
@@ -105,12 +105,13 @@
               <li><a class="dropdown-item" href="{{ url_for('listar_clientes') }}">Listar Clientes</a></li>
               <li><a class="dropdown-item" href="{{ url_for('listar_servicos') }}">Listar Serviços</a></li>
               <li><a class="dropdown-item" href="{{ url_for('listar_pecas') }}">Listar Peças</a></li>
+              <li><a class="dropdown-item" href="{{ url_for('relatorios') }}">Relatórios de Ordens</a></li>
             </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('relatorios') }}">
-              <i class="bi bi-file-earmark-bar-graph me-1"></i>Relatórios
+            <a class="nav-link" href="{{ url_for('configuracoes') }}">
+              <i class="bi bi-file-earmark-bar-graph me-1"></i>Configurações
             </a>
           </li>
 
