--- a/templates/detalhes_orcamento.html
+++ b/templates/detalhes_orcamento.html
@@ -88,7 +88,7 @@
           </select>
         </div>
 
-        <div class="col-12 text-center">
+        <div class="col-12 my-3 text-center">
           <button class="btn btn-success btn-sm" type="submit">💾 Salvar Alterações</button>
         </div>
 
