--- a/templates/base.html
+++ b/templates/base.html
@@ -154,6 +154,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/imask"></script>
   <script>
     const toggleBtn = document.getElementById('themeToggle');
     const html = document.documentElement;
